<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mine.view.RegistActivity">

    <RelativeLayout
        android:id="@+id/layout_title_regist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/regist"
            android:textColor="@color/colorBlack"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/tv_regist"
            android:src="@mipmap/img_user_default" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_tel_regist"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/login_edit_bg">

        <EditText
            android:id="@+id/edit_tel_regist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/please_input_tel"
            android:textSize="20dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_pwd_regist"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/login_edit_bg">

        <EditText
            android:id="@+id/edit_pwd_regist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/please_input_pwd"
            android:inputType="textPassword"
            android:textSize="20dp" />

    </RelativeLayout>


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/login_edit_bg">

        <EditText
            android:id="@+id/edit_repwd_regist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/input_pwd_again"
            android:inputType="textPassword"
            android:textSize="20dp" />

    </RelativeLayout>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/login_edit_bg">

        <EditText
            android:id="@+id/edit_vertification_regist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="130dp"
            android:layout_marginRight="130dp"
            android:background="@null"
            android:gravity="center"
            android:hint="输入验证码"

            android:textSize="20dp" />


        <View

            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="120dp"
            android:background="@color/colorWhite" />

        <TextView
            android:id="@+id/tv_send_vertification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="发送验证码"
            android:textSize="16dp" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/btn_regist"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login_use_bg"
        android:src="@drawable/ic_img_login_right" />


</LinearLayout>